# pyTempo

./: .gitignore  .gitmodules  Makefile  README.md  _config.yml  about.md  core.py  diagrams.md  docs.md  download.md  index.md  main.py  pyproject.toml  rdme-file.md  setup.cfg  statechart diagram.txt  templates.py  tempo.kv  tempoapp.py  tes.py  test.py  use case diagram.txt
_posts/: 2020-05-10-First-post.md  index.md
data/: environment.yml  requirements.yml
data/examples/: stories.json  tasks.json  tempo.ini
data/specs/: README.md  Tempo.spec  TempoOne.spec  TempoSpec.spec  build-one.py
demo/: anchorapp.py  calc.py  myapp.py  paintapp.py
doc/diagrams/: Sequence Diagram.txt
docs/: index.md
docs/site/: index.md
docs/specs/: Tempo.spec
howdy/: boxapp.py  gridapp.py  inputapp.py
kivylearn/: tempo.kv  tempoapp.py
pong/: main.py  pong.kv
tempo/: __init__.py  appsettings.py  config.py  core.py  database.py  dates.py  task.py  templates.py  tempo.ini  tempo.kv  tempo.py  tempoapp.py  utils.py  wid.py  widgets.py
tempo/settings/: __init__.py  general.json  pomodoro.json  window.json
tempo/tests/: test_app.py  test_dates.py
tempo/tests/fixtures/: data.json
tempo/widgets/: task.kv
tests/: tasks.json  test.py  test_app.py  test_dates.py  test_utils.py
tests/fixtures/: tasks.json
weatherapp/: weather.kv  weather.py
