[tool.poetry]
name = "tempo"
version = "0.2.0"
description = "Tempo is a task-management application"
authors = ["kotano <kot4no@gmail.com>"]

packages = [
    {include = "tempo"},
]

[tool.poetry.scripts]
tempo = "tempo.tempo:main"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
