[tool.poetry]
name = "Tempo"
version = "0.6.0"
description = "Tempo is a task-management application."
authors = ["kotano <kot4no@gmail.com>"]

packages = [
    {include = "tempo"},
]

[tool.poetry.scripts]
Tempo = "main:main"

[tool.poetry.dependencies]
python = "^3.6"
kivy = "^1.11.1"
"kivy_deps.sdl2" = "^0.2.0"
"kivy_deps.glew" = "^0.2.0"
plyer = "^1.4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.4.1"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
